# clayseal-receipts

./: .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
agent_receipts/: __init__.py  cli.py
agentauth/: __init__.py  biscuit_scope.py  core_shim.py  workload_keys.py
agentauth-mcp/: .gitignore  README.md  briefing.py  config.py  identity_backend.py  mandate.py  pyproject.toml  receipts_engine.py  run.sh  server.py  sessions.py  setup_mandate.py
agentauth-mcp/mandates/: swe-triage.authorization.json
agentauth-mcp/policies/: pr_gate.policy.yaml
agentauth-mcp/tests/: test_ci_gate.py  test_http.py  test_inproc.py  test_stdio.py
agentauth/backend/: __init__.py  api_keys.py  attestation.py  audit.py  biscuit_keys.py  capabilities.py  config.py  db.py  deps.py  errors.py  identity.py  main.py  models.py  mtls.py  schemas.py  secret_encryption.py  signing_keys.py
agentauth/core/: __init__.py  authority_binding.py  budget.py  conformance.py  decision.py  delegation.py  hash_util.py  identity_protocol.py  lineage.py  mandate.py  operations.py  outcomes.py  path_matching.py  plugins.py  production.py  protocols.py  resource_refs.py  runtime.py  safe_http.py  schemas.py  signing.py  task_scope.py
agentauth/identity/: __init__.py  _capabilities.py  _devattest.py  _http.py  (+5 more)
backend/: README.md
benchmarks/: .gitignore  DATA_EVIDENCE_BACKLOG.md  PARTNER_SYNC.md  README.md  ev201_compare.py  ev202_compare.py  ev301_ecs_export.py  ev302_crosswalk.py  requirements.txt  run.py  soundness.py
compliance/: README.md  eu-ai-act.yaml  iso27001.yaml  soc2.yaml
config/: cursor-mcp.json.example  env.example  partner.example.yaml  partner.production.example.yaml
crates/agent-receipts-cli/: Cargo.toml
crates/agent-receipts-cli/src/: main.rs
crates/agent-receipts-composed/: Cargo.toml
crates/agent-receipts-composed/src/: compose.rs  inference.rs  lib.rs  recursive.rs
crates/agent-receipts-core/: Cargo.toml  README.md
crates/agent-receipts-core/src/: audit.rs  certificate.rs  hash.rs  lib.rs  policy.rs  proof.rs
crates/agent-receipts-policy-circuit/: Cargo.toml
crates/agent-receipts-policy-circuit/src/: circuit.rs  confidential.rs  keys.rs  lib.rs
crates/agent-receipts-session/: Cargo.toml
crates/agent-receipts-session/src/: batch.rs  envelope.rs  fold.rs  lib.rs
crates/agent-receipts-sp1/: .gitignore  Cargo.toml
crates/agent-receipts-sp1/program/: Cargo.toml
crates/agent-receipts-sp1/program/.cargo/: config.toml
crates/agent-receipts-sp1/program/src/: main.rs
crates/agent-receipts-sp1/src/: main.rs
crates/agent-receipts-zkvm/: Cargo.toml
crates/agent-receipts-zkvm/methods/: Cargo.toml
crates/agent-receipts-zkvm/methods/guest/: Cargo.toml
crates/agent-receipts-zkvm/methods/guest/src/: main.rs
crates/agent-receipts-zkvm/methods/src/: lib.rs
crates/agent-receipts-zkvm/src/: main.rs
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/: CODE_EXEC_DEMO.md  README.md  agentauth_gate.py  code_exec_demo.py  dev_scan.yaml  dev_tools.yaml  dev_tools_server.py  llm_agent.py  poisoned_mcp_demo.py  rippling_deepagents_demo.py  run_demo.py
docs/: DEV_GUIDE.md  PRIVACY.md  README.md  agentauth_architecture_for_rippling.md  agentauth_onepager.md  agentauth_onepager.tex  arch-review.md  architecture.md  assurance_taxonomy.md  audit_interop.md  backward_compatibility.md  combined_corpus_sota_review.md  compliance_mapping.md  decision_model.md  deployment.md  design_partner.md  devin_exploit_summary_table.tex  devin_fusion_attack_scenarios.md  devin_gate_improvements_backlog.md  devin_redteam_index.md  devin_redteaming_backlog.md  dynamic_planning.md  execution_context.md  framework_integrations.md  http_verifier.md  inference_and_composition.md  l1_l2_hardening.md  l1_l2_sota_assessment.md  l1_l2_token_architecture.md  l1_l3l4_boundary.md  l2_l3_sandbox_monitor_backlog.md  l3_l4_backlog.md  landscape_research.md  mcp_integration.md  mcp_live_server.md  open_standard_strategy.md  otel_genai_mapping.md  outreach_today.md  partner_runbook.md  policy_language.md  (+18 more)
examples/: 01_quickstart.py  02_capabilities.py  POISONED_MCP_DEMO.md  README.md  common.py  composed_prove_fraud_agent.py  k1_mcp_tool_description_poison_demo.py  k2_mcp_stdio_rce_demo.py  mcp_api_key_logger_server.py  mcp_fraud_agent.py  mcp_live_client.py  mcp_live_prove_client.py  mcp_live_server.py  mcp_sse_client.py  partner_pilot.py  poisoned_mcp_server.py  proven_fraud_agent.py  refund_mcp_server.py  requirements.txt  shadow_fraud_agent.py  wiki_poison_server.py
identity/: README.md  identity.md
mcp-lab/: .gitignore  README.md  control.sh  pyproject.toml  run.sh  server.py
policies/: egress_demo.yaml  fraud_decision.yaml  tool_use_min.yaml
scripts/: agentauth_merge_check.py  arctl.sh  bootstrap.sh  coverage_summary.py  download_benchmark_corpora.sh  evaluate_devin_advanced_attacks.py  evaluate_devin_compromise_scenarios.py  evaluate_devin_issue_attacks.py  evaluate_gate_hardening.py  evaluate_gate_hygiene_anomaly.py  evaluate_gate_runtime_defenses.py  evaluate_gate_toctou_binding.py  evaluate_receipt_chain.py  evaluate_runtime_egress.py  export_fraud_onnx.py  ezkl_setup_fraud_head.sh  gen_cursor_mcp.py  layer_install_smoke.sh  partner_preflight.sh  partner_smoke.sh  prove_tier_matrix.py  publish_c1b_d3_demo_repos.sh  rippling_cross_session_volleys.py  run_devin_backlog_extensions.sh  run_devin_c1b_d3_demo.sh  run_devin_c1b_unicode.sh  run_devin_c7_mcp_rugpull.sh  run_devin_c7b_unprompted.sh  run_devin_c7b_unprompted_full.sh  run_devin_cache_poison.sh  run_devin_ci_logs_exfil.sh  run_devin_corruption_experiment.sh  run_devin_dependency_source.sh  run_devin_env_token_exfil.sh  run_devin_f8_mcp_credential_replay.sh  run_devin_g1_slowdrip.sh  run_devin_issue_experiments.sh  run_devin_k1_tool_desc_poison.sh  run_devin_l1_infection.sh  run_devin_local_ij.sh  (+30 more)
(+592 files in other folders)
