[workspace]
resolver = "2"
members = [
    "crates/agent-receipts-core",
    "crates/agent-receipts-policy-circuit",
    "crates/agent-receipts-composed",
    "crates/agent-receipts-session",
    "crates/agent-receipts-cli",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pberlizov/agent-receipts"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bincode = "1"
rand = "0.8"
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
halo2_proofs = { version = "0.3", default-features = false, features = ["multicore"] }
