[project]
name = "agentauth-mcp"
version = "0.1.0"
description = "AgentAuth gate exposed as an MCP server: identity + capability tokens + receipts + ZK proofs for autonomous coding agents (Devin)."
requires-python = ">=3.11"
dependencies = [
    "agentauth[mcp]",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
agentauth-mcp = "server:main"

# agentauth is consumed from the local checkout (not published). run.sh installs
# it editable; for `uv sync` workflows this points uv at the sibling repo.
[tool.uv.sources]
agentauth = { path = "../agent-receipts", editable = true }

[tool.setuptools]
py-modules = [
    "server",
    "config",
    "identity_backend",
    "sessions",
    "mandate",
    "receipts_engine",
    "briefing",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
