[project]
name = "agentauth-mcp"
version = "0.1.0"
description = "AgentAuth gate exposed as an MCP server: identity + capability tokens + receipts + ZK proofs for autonomous coding agents (Devin)."
requires-python = ">=3.11"
dependencies = [
    "agentauth-receipts[identity,mcp]>=0.5,<0.6",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
agentauth-mcp = "server:main"

# agentauth-receipts is consumed from the local checkout. run.sh installs it
# editable; for `uv sync` workflows this points uv at the parent repo.
[tool.uv.sources]
agentauth-receipts = { path = "..", editable = true }

[tool.setuptools]
py-modules = [
    "server",
    "config",
    "identity_backend",
    "sessions",
    "mandate",
    "receipts_engine",
    "briefing",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
