[project]
name = "mcp-poisoning-lab"
version = "0.1.0"
description = "Deliberately-vulnerable MCP server for demonstrating tool-poisoning / rug-pull / output-poisoning against an autonomous coding agent (Devin). Lab use only."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[tool.uv]
package = false
