[package]
name = "agent-receipts-cli"
description = "CLI for policy, inference, and composed proof generation and verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-receipts"
path = "src/main.rs"

[dependencies]
agent-receipts-composed = { path = "../agent-receipts-composed" }
agent-receipts-policy-circuit = { path = "../agent-receipts-policy-circuit" }
agent-receipts-session = { path = "../agent-receipts-session", features = ["nova-fold"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
