[package]
name = "agent-receipts-composed"
description = "Composed inference (EZKL) + policy (Halo2) proof envelopes and verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-receipts-policy-circuit = { path = "../agent-receipts-policy-circuit" }
ff.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
bincode.workspace = true
flate2 = "1"
generic-array = "0.14"
nova-snark = { version = "0.41", default-features = false }

[dev-dependencies]
