[package]
name = "agent-receipts-zkvm"
description = "RISC Zero zkVM proof of the fraud head (non-EZKL inference proof, SOTA-8)"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Detached from the parent workspace: building the rest of agent-receipts must not
# require the RISC Zero toolchain. Build this crate explicitly with rzup installed.
[workspace]

[[bin]]
name = "agent-receipts-zkvm"
path = "src/main.rs"

[dependencies]
fraud-head-methods = { path = "methods" }
risc0-zkvm = "3.0"
serde_json = "1"
hex = "0.4"
bincode = "1"

[profile.release]
opt-level = 3
